# file_code_tagger

./: .gitignore  add_file_tags.py  create_db_tables.sql  db_models.py  dev_notebook.ipynb  dev_notebook2.ipynb  dim_reduction_viz.ipynb  embedding_dev_notebook.ipynb  file_embedding_notebook.ipynb  knn_test_20250923.ipynb  logging_setups.py  pyproject.toml  requirements.txt  sync_tables.py  test_date_extraction.py  test_db_access.py  test_pdf_extraction_performance.py  utils.py  visualizations.ipynb
cli/: add_files.py  admin.py  extract_date_mentions.py
db/: __init__.py  db.py  models.py
embedding/: base.py  minilm.py
embeddings/: base.py  minilm.py
extracting/: extractors.py  image_extractor.py  msft_extractor.py  pdf_extractor.py  word_extractor.py
knn/: __init__.py  base.py  evaluation.py  knn.py
pipeline/: add_files_pipeline.py  date_mentions_pipeline.py
text_extraction/: __init__.py  basic_extraction.py  extraction_utils.py  image_extraction.py  office_doc_extraction.py  pdf_extraction.py  web_extraction.py
